--- a/.github/workflows/install-ansible.yaml
+++ b/.github/workflows/install-ansible.yaml
@@ -21,8 +21,8 @@ jobs:
 
       - name: Install Ansible
         run: |
-          sudo dnf install python3-pip -y
-          pip3 install ansible -y
+          sudo dnf install -y python3-pip 
+          pip3 install -y ansible 
           
 
       - name: Check Ansible version
